Agregada funcionalidad que muestra un AlertDialog en el QuizzActivity al intentar cerrarlo

--- a/app/src/main/res/layout/activity_quizz.xml
+++ b/app/src/main/res/layout/activity_quizz.xml
@@ -9,7 +9,7 @@
     android:paddingEnd="20dp"
     android:paddingTop="20dp"
 
-    tools:context=".QuizzActivity">
+    tools:context=".view.QuizzActivity">
 
     <LinearLayout
         android:id="@+id/linearPB"
