--- a/app/src/main/res/layout/item_collection_card.xml
+++ b/app/src/main/res/layout/item_collection_card.xml
@@ -31,6 +31,14 @@
             android:padding="10dp"
             />
 
+        <ImageButton
+            android:id="@+id/btnDeleteCollection"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_delete"
+            android:background="@android:color/transparent"
+            />
+
 
     </LinearLayout>
 
